--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "apexcharts": "^3.37.1",
     "chart.js": "^4.2.1",
     "millify": "^6.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
+    "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.5",
