--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.9.0",
     "redux": "^4.2.1",
     "styled-components": "^5.3.5"
   },
